put user claims into jwt in auth service